src/main/resources/_notify-styles/notification-styles.css
@font-face {
    font-family: "Poppins",
    src: url("_fonts/Poppins/Poppins-Regular.ttf");
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: "RobotoCondensed",
    src: url("_fonts/Roboto_Condensed/static/RobotoCondensed-Regular.ttf");
    font-weight: normal;
    font-style: normal;
}
* {
    -fx-font-family: "Roboto Condensed";
    -fx-font-size: 12px;
}
/** default icon styling */
.root {
    -fx-background-color: rgba(0,0,0,0.2);
}
.icon {
     -fx-text-fill: #000;
     -fx-font-size: 16px;
}
.parent-container {
    -fx-effect: dropshadow(one-pass-box,rgba(0,0,0,.3),2,1,1,2);
    -fx-font-family: "Poppins";
}

.close-btn:hover {
    -fx-background-color: red;
}
.close-btn:hover .icon {
    -fx-icon-color: #fff;
}
/**
    =================================
    ============== TOAST ============
    =================================

$toastSuccess: #2ecc71;
$toastInfo: #3498db;
$toastErr: #e74c3c;
$toastAlert: #f39c12;
$toastNeutral: #7f8cbd;
*/
.toast {
    -fx-padding: 3px;
    -fx-border-width: 0 0 2px 0;
    -fx-border-color: transparent transparent transparent transparent;
    -fx-background-color: white;
}
.toast.success {
    -fx-border-color: transparent transparent #2ecc71 transparent;
}
.toast.success .toast-icon .icon {
    -fx-icon-color: #2ecc71;
}
.toast.error {
    -fx-border-color: transparent transparent #e74c3c transparent;
}
.toast.error .toast-icon .icon {
    -fx-icon-color: #e74c3c;
}
.toast.alert {
    -fx-border-color: transparent transparent #f39c12 transparent;
}
.toast.alert .toast-icon .icon {
    -fx-icon-color: #f39c12;
}
.toast.info {
    -fx-border-color: transparent transparent #3498db transparent;
}
.toast.info .toast-icon .icon {
    -fx-icon-color: #3498db;
}
.toast.neutral {
    -fx-border-color: transparent transparent #7f8cbd transparent;
}
.toast.neutral .toast-icon .icon {
    -fx-icon-color: #7f8cbd;
}
.toast-icon {
    -fx-width: 40px;
    -fx-padding: 3px;
}
.toast-icon .icon {
    -fx-icon-color: red;
}
.toast-message {
    -f-font-family: "Poppins";
    -fx-min-width: 40px;
    -fx-max-width: 200px;
    -fx-font-size: 12px;
    -fx-text-fill: #000;
    -fx-line-spacing: -3;
}

/**
    ================================
    ======== NOTIFICATION ==========
    ================================
*/
.notification {
    -fx-pref-width: 350px;
    -fx-text-fill: #eee;
    -fx-padding: 2px;
    -fx-border-radius: 3px;
    -fx-background-radius: 3px;
    -fx-background-color: #fff;
}

.notification-head {
    -fx-padding: 0 0 2px 0;
    -fx-border: 0 0 2px 0;
    -fx-border-style: solid;
    -fx-border-color: transparent transparent #eee transparent;
    -fx-background-color: white;
}

.notification-title {
    -f-font-family: "Roboto Condensed";
    -fx-pref-width: 306px;
    -fx-pref-height: 25px;
    -fx-text-fill: #000;
    -fx-font-weight: 700;
    -fx-background-color: inherit;
}

.notification-close {
    -fx-pref-width: 40px;
    -fx-pref-height: 25px;
    -fx-cursor: hand;
    -fx-border-radius: 3px;
    -fx-background-radius: 3px;
    -fx-background-color: #eee;
}


/*Notification body*/
.notification-body {
    -f-font-family: "Poppins";
    -fx-pref-width: 346;
    -fx-pref-height: 40px;
    -fx-min-height: 40px;
    -fx-max-height: 60px;
    -fx-text-fill: #000;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-text-box-border: transparent;
    -fx-padding: 0;
    -fx-border-width: 0;
    -fx-border-color: transparent;
    -fx-background-insets: 0;
    -fx-background-radius: 0;
    -fx-background-color: transparent;
    -fx-cursor: default;
}
.notification-body .content {
    -fx-cursor: default;
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-background-color: #fff;
}

.notification-footer {
    -fx-padding: 5px 2px 5px 5px;
    -fx-background-radius: 0 0 3px 3px;
    -fx-background-color: #eee;
}
.notification-footer .button {
    -fx-border-radius: 5px;
    -fx-background-color: #e4e4e4;
    -fx-cursor: hand;
}


/**
    ==========================
    ======== PROMPT ==========
    ==========================
*/
.prompt {
    -fx-min-width: 300px;
    -fx-text-fill: #eee;
    -fx-padding: 2px;
    -fx-border-radius: 3px;
    -fx-background-radius: 3px;
    -fx-background-color: #fff;
}

.prompt-head {
    -fx-padding: 0 0 2px 0;
    -fx-border: 0 0 2px 0;
    -fx-border-style: solid;
    -fx-border-color: transparent transparent #eee transparent;
    -fx-background-color: white;
}

.prompt-title {
    -f-font-family: "Roboto Condensed";
    -fx-pref-width: 260px;
    -fx-pref-height: 25px;
    -fx-text-fill: #000;
    -fx-font-weight: 700;
    -fx-background-color: inherit;
}

.prompt-close {
    -fx-pref-width: 40px;
    -fx-pref-height: 25px;
    -fx-cursor: hand;
    -fx-border-radius: 3px;
    -fx-background-radius: 3px;
    -fx-background-color: #eee;
}

/*Notification body*/
.prompt-body {
    -f-font-family: "Poppins";
    -fx-min-width: 296px;
    -fx-text-fill: #000;
    -fx-padding: 5px 3px 5px 3px;
    -fx-background-color: inherit
}
.prompt-body .prompt-label {
    -fx-font-size: 12px !important;
    -fx-font-weight: 300;
    -fx-background-color: transparent;
}
.prompt-body .prompt-divider {
    -fx-pref-height: 10px;
}
.prompt-body .prompt-text {
    -f-font-family: "Poppins";
    -fx-pref-width: 296;
    -fx-text-fill: #000;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-text-box-border: transparent;
    -fx-padding: 2px;
    -fx-border-width: 0 0 1px 0;
    -fx-border-color: transparent transparent #e3e3e3 transparent;
    -fx-background-insets: 0;
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}
.prompt-body .prompt-text.text {
    -fx-height: 30px;
    -fx-padding: 3px;
    -fx-background-color: inherit;
    -fx-border-color: transparent transparent #e4e4e4 transparent;
}
.prompt-body .prompt-text.textarea {
    -fx-min-height: 60px;
    -fx-max-height: 80px;
}
.prompt-body .prompt-text.textarea .content {
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-background-color: #fff;
}

.prompt-footer {
    -fx-padding: 5px 2px 5px 5px;
    -fx-background-radius: 0 0 3px 3px;
    -fx-background-color: #eee;
}
.prompt-footer .button {
    -fx-border-radius: 5px;
    -fx-background-color: #e4e4e4;
    -fx-cursor: hand;
}

